# mesqual

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: test-with-vanilla-studies.yml
docs/api_reference/: datasets.md  study_manager.md
docs/api_reference/energy_data_handling/: granularity_modules.md  index.md  network_lines_data.md  time_series_gap_handling.md
mescal/: __init__.py  enums.py  study_manager.py  typevars.py  units.py  validation.py
mescal/data_sets/: __init__.py  data_set.py  data_set_collection.py  data_set_comparison.py  data_set_config.py  platform_data_set.py
mescal/databases/: __init__.py  data_base.py  database.py  pickle_db.py
mescal/dataframe_transformations/: aggregate_cols_with_part_in_common.py  aggregate_up_down_directions_to_net_column.py  membership_pairs_appender.py  membership_property_enrichers.py
mescal/datasets/: __init__.py  dataset.py  dataset_collection.py  dataset_comparison.py  dataset_config.py  platform_dataset.py
mescal/energy_data_handling/: __init__.py  granularity_analyzer.py  granularity_converter.py  network_lines_data.py  time_series_gap_handling.py
mescal/flag/: __init__.py  flag.py  flag_index.py
mescal/kpis/: __init__.py  aggs.py  kpi_base.py  kpi_collection.py  kpi_grouper.py  kpis_from_aggregations.py  utils.py
mescal/mock/: __init__.py  mock_data_set.py  mock_study_manager.py
mescal/utils/: check_all_same.py  data_availability_checker.py  file_pattern_parser.py  html_dashboard.py  logging.py  pair_combiner.py  pretty_scaling.py  set_aggregations.py  string_conventions.py  string_inflections.py  string_union.py  theme.py
mescal/visualizations/: __init__.py  html_dashboard.py  html_table.py  tabulator_table.py  value_mapping_system.py
mesqual/: __init__.py  study_manager.py  typevars.py  units.py  validation.py
mesqual/databases/: __init__.py  database.py  mongo_db.py  pickle_db.py  sql_db.py
mesqual/datasets/: __init__.py  dataset.py  dataset_collection.py  dataset_comparison.py  dataset_config.py  platform_dataset.py
mesqual/energy_data_handling/: __init__.py  granularity_analyzer.py  granularity_converter.py  network_lines_data.py  time_series_gap_handling.py
mesqual/flag/: __init__.py  flag.py  flag_index.py
mesqual/kpis/: __init__.py  aggregations.py  aggs.py  attributes.py  collection.py  kpi.py  kpi_base.py  kpi_collection.py  kpis_from_aggregations.py
mesqual/utils/: dict_combinations.py  file_pattern_parser.py  intersect_dicts.py  logo_generator.py  package_path.py  pretty_scaling.py  set_aggregations.py  str_to_bool.py  theme.py
mesqual/visualizations/: __init__.py  html_dashboard.py  html_table.py
(+277 files in other folders)
