[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesqual"
version = "0.1.0"
description = "Modular Energy Scenario Comparison and Analysis Library"
readme = "README.md"
license = {file = "LICENSES/LGPL-3.0-or-later.txt"}
authors = [
    {name = "Helge Esch"}
]
maintainers = [
    {name = "Helge Esch"}
]
dependencies = [
    "pandas",
    "geopandas",
    "shapely",
    "plotly",
    "folium",
    "branca",
    "jinja2",
    "numpy",
    "networkx",
    "pint",
    "colorlog",
    "tqdm",
    "python-polylabel",
    "captain-arro",
]

[project.urls]
Homepage = "https://mesqual.io"
Repository = "https://github.com/helgeesch/mesqual"
Documentation = "https://docs.mesqual.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["mesqual", "mesqual.*"]

[tool.setuptools.package-data]
mesqual = ["data/*.geojson"]